# backend-grab

./: .dockerignore  .env.example  .gitignore  .http  Dockerfile  MENU_API_GUIDE.md  README-united.md  README.md  SETUP.md  admin.http  commitlint.config.mjs  docker-compose.united.yml  docker-compose.yml  dump-db-script.sh  init-united-db.sql  init-united-services.sql  main.py  package-lock.json  package.json  requirements.txt
Auth.Services/: Dockerfile  admin.http  create_admin.py  main.py  pyproject.toml
Auth.Services/alembic/: env.py
Auth.Services/alembic/versions/: 0227e3b20ed0_replace_is_active_with_status.py  591d7f40787d_replace_is_active_with_status.py  7ab0a2057ff7_update_attirbute_for_user.py  7d7ee4e6d77f_add_role.py  ba1d57173c82_replace_is_active_with_status.py
Auth.Services/database/: client.py
Auth.Services/dump/db/: init-auth.sql  init-united.sh
Auth.Services/models/: auth.py
Auth.Services/routes/: admin.py  auth.py
Auth.Services/schemas/: __init__.py  response.py
Auth.Services/script/: run_postgres.sh
Auth.Services/utils/: auth.py
Driver.Services/: .dockerignore  .env.example  .gitignore  Dockerfile  Driver.Services.sln  README.md  docker-compose.yml  dump-db-script.sh  start.sh  test-local.sh
Order.Services/: Dockerfile  README.md  SETUP.md  alembic.ini  create_db.py  docker-compose.yml  entrypoint.sh  requirements.txt
Restaurants.Services/: DOCKER_GUIDE.md  Dockerfile  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  main.py  requirements.txt  seed_data.py
alembic/: env.py
app/: main.py  models.py  schemas.py
(+215 files in other folders)
